--- a/src/css/ResultsScreen.css
+++ b/src/css/ResultsScreen.css
@@ -1,150 +1,312 @@
-.results-screen {
-  display: flex;
+body {
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight);
+  font-style: var(--font-style);
+  color: var(--uvx-primary);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight);
+  color: var(--font-accent-color);
+}
+
+p, label, span {
+  font-family: var(--font-primary);
+  font-size: var(--font-small);
+}
+
+.achievement-item {
+  font-family: var(--font-primary);
+  font-size: var(--font-small);
+}
+
+.icon-badge {
+  color: var(--uvx-primary);
+}
+
+button {
+  background-color: var(--uvx-primary);
+  border-radius: var(--border-radius);
+  font-family: var(--font-primary);
+  font-weight: var(--font-weight);
+  font-size: var(--font-medium);
+}
+
+.screen-container {
   position: fixed;
+  width: 100%;
   height: 100vh;
-  width: 100%;
-  color: #ffffff;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  align-items: center;
+  display: flex;
   justify-content: center;
-  pointer-events: all;
-  z-index: 3;
-  padding: 5%;
-  backdrop-filter: blur(50px);
-  backdrop-filter: grayscale(100%);
+  align-items: center;
+  background-color: rgba(39, 39, 39, .95);
+  z-index: 99;
 }
 
-.blendHue {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
+.results-text-bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  height: 8%;
+  width: 18%;
+  margin-top: -2.5rem;
+  border-radius: 15px;
+}
+
+.results-text {
+  text-align: center;
+  font-size: 3vw;
+  color: #44F3B6;
+  text-shadow: 3px 3px 6px black;
   width: 100%;
-  z-index: 2;
-  background-color: turquoise;
-  background-blend-mode: hue;
-  opacity: 0.7;
 }
 
-.results-data-container {
-  position: relative;
+.congrats-text-bg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  height: 8%;
+  width: 35%;
+  margin-top: -2.5rem;
+  margin-left: 1rem;
+  background: linear-gradient(to right, #44F3B6, transparent);
+  border-radius: 15px;
+}
+
+.congrats-text {
+  text-align: left;
+  font-size: 3.5vw;
+  color: white;
+  text-shadow: 3px 3px 6px black;
+  width: 100%;
+  margin-left: 1.5rem;
+}
+
+.stats-text-bg {
   display: flex;
   flex-direction: column;
-  width: 85%;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  border-radius: 1rem;
-  background: #1e1e1e;
-  padding: 2%;
-  z-index: 3;
-  color: white;
+  position: fixed;
+  width: 13.5%;
+  margin-bottom: 0;
 }
 
-.results-data {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
+.stats-text {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 3vw;
+  color: #44F3B6;
+  text-shadow: 3px 3px 6px black;
+  width: 100%;
   margin-bottom: 1rem;
 }
 
-.results-data-item {
-  display: flex;
-  flex-direction: column;
+.box-container {
+  width: 55%;
+  height: auto;
+  justify-content: center;
   align-items: center;
-  text-align: center;
-  width: 200px;
-  padding: 1rem;
-  border: 1px solid #ececec;
-  border-radius: 1rem;
-  background: #333333;
-  height: 150px;
+  z-index: 99;
 }
 
-/* Game totals */
-.results-data-metric {
-  font-size: 2rem;
-  margin-top: auto;
+.box-row {
+  height: auto;
+  width: 100%;
+  display: flex;
+}
+
+.box1, .box2, .box3, .box4 {
+  background-color: hsla(0, 0%, 0%, 0.4);
+  margin-bottom: 1rem;
+}
+
+.box1 {
+  width: 20%;
+  height: 45vh;
+  margin-right: 30px;
+  display: flex;
+  align-items: center;
+  align-items: flex-start;
+  justify-content: left;
+  flex-direction: column;
+}
+
+.box2 {
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.badge-container {
+  width: 95%;
+  height: 30vh;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99999;
+}
+
+.badge {
+  height: 20vh;
+  width: 25%;
 }
 
 .achievements-container {
-  display: flex;
-  justify-content: space-around;
-  width: 50%;
-  margin-bottom: 1rem;
-}
-
-.achievement {
+  position: fixed;
+  height: 45%;
+  width: 20%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  margin-left: 1rem;
+}
+
+.achievement-item {
+  display: flex;
   align-items: center;
-  text-align: center;
-  width: 100px;
-  margin: 0 10px;
+  margin: 25px 0;
 }
 
-.achievement-icon {
-  font-size: 3rem;
-  margin-bottom: 0.5rem;
+.text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.achievement-value {
-  font-size: 1rem;
+.top-line-results-text {
+  font-size: 30px;
   font-weight: bold;
-}
-
-.xp-bar {
-  position: relative;
-  width: 100%;
-  height: 30px;
-  background: #444444;
-  border-radius: 15px;
-  overflow: hidden;
-  margin-bottom: 1rem;
-}
-
-.xp-progress {
-  height: 100%;
-  background: linear-gradient(to right, #0ed8a5, #0e96d8);
-  border-radius: 15px 0 0 15px;
-}
-
-.xp-label {
-  position: absolute;
-  width: 100%;
-  text-align: center;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 1rem;
-}
-
-.xp-levels {
-  position: absolute;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  top: -25px;
-  font-size: 1rem;
-}
-
-.results-button-container {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-  margin-top: 1rem;
-}
-
-.results-button-container button {
-  background-color: #f0ad4e;
   color: white;
-  border: none;
-  padding: 10px 20px;
-  margin: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1em;
 }
 
-.results-button-container button:hover {
-  background-color: #ec971f;
+.bottom-line-results-text {
+  font-size: 16px;
+  color: lightgray;
+  margin-top: 2px;
+}
+
+.achievement-item input[type="checkbox"] {
+  margin-right: 25px;
+  transform: scale(2.5);
+}
+
+
+@keyframes growMedal {
+  0% {
+    transform: scale(0.1);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.25);
+  }
+}
+
+.medal-img {
+  width: 200px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  animation: growMedal 1s ease-out;
+}
+
+
+.box3 {
+  width: 100%;
+  height: 40vh;
+  margin-right: 30px;
+}
+
+.box4 {
+  display: flex;
+  justify-content: center;
+  align-items: top;
+  width: 100%;
+  height: 40vh;
+}
+
+.box4-title {
+  position: fixed;
+  margin-top: 0.5rem;
+  color: white;
+}
+
+.box4-text {
+  font-size: 1.5rem;
+  color: white;
+}
+
+.stats-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  align-items: center;
+}
+
+.stat-item {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-right: 20px;
+  margin-top: 10px;
+  background-color: black;
+  border-radius: 20px;
+  padding: 15px;
+}
+
+.icon-badge {
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  margin-right: 15px;
+  color: #44F3B6;
+  font-weight: bold;
+  font-size: 3rem;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.stat-desc {
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  flex-grow: 1;
+}
+
+.stat-item p {
+  margin: 0;
+  font-size: 1.5rem;
+  color: white;
+  margin-left: 30px;
+  text-align: right;
+}
+
+@media (max-width: 768px) {
+  .results-text, .congrats-text, .stats-text {
+    font-size: 5vw;
+  }
+
+  .box1, .box2, .box3, .box4 {
+    height: auto;
+  }
+
+  .icon-badge {
+    width: 2.5rem;
+    height: 2.5rem;
+    font-size: 1.2rem;
+  }
+
+  .stat-item {
+    font-size: 2vw;
+  }
 }
