--- a/src/css/ResultsScreen.css
+++ b/src/css/ResultsScreen.css
@@ -6,26 +6,41 @@
   color: var(--uvx-primary);
   font-family: var(--font-primary);
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   pointer-events: all;
   z-index: 4;
   padding: 5%;
   transition: all 5s ease-in-out;
-  background-color: rgba(39, 39, 39, .65);
   backdrop-filter: blur(50px);
   backdrop-filter: grayscale(100%);
 }
 
-/* All of the boxes can share a class */
-.results-ui-box {
-  background-color: hsla(0, 0%, 0%, 0.8);
-  border-radius: var(--border-radius);
+.blend-hue {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 4;
+  background-color: black;
+  background-blend-mode: hue;
+  opacity: 0.8;
+  transition: all 1s ease-in-out;
 }
 
+/* All of the boxes can share a class */
+.results-ui-box {
+  background-color: hsla(0, 0%, 0%, 0.6);
+  border-radius: var(--border-radius);
+  padding: 2%;
+  z-index: 4;
+}
+
+/* LEFT SIDE */
 .achievement-container {
   display: flex;
   flex-direction: column;
-  padding: 2%;
+  flex-basis: 30%;
 }
 
 .achievement-container::before{
@@ -35,6 +50,7 @@
   margin-left: -2%;
   font-size: var(--font-medium);
   font-weight: var(--font-weight);
+  font-style: italic;
   text-shadow: 3px 3px 6px black;
 }
 
@@ -57,6 +73,7 @@
 
 .achievement-title {
   font-weight: var(--font-weight);
+  font-style: italic;
 }
 
 .achievement-description {
@@ -64,8 +81,73 @@
   font-size: var(--font-small);
 }
 
-.icon-badge {
-  color: var(--uvx-primary);
+/* RIGHT SIDE */
+.results-summary {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 60%;
+}
+
+.results-summary::before{
+  content: "Congratulations!";
+  position: absolute;
+  z-index: 5;
+  margin-top: -5rem;
+  padding: 5px 10px;
+  font-size: var(--font-large);
+  font-weight: var(--font-weight);
+  font-style: italic;
+  color: white;
+  background: linear-gradient(to right, #44F3B6, transparent);
+  border-radius: 1rem 0 0 1rem;
+  text-shadow: 3px 3px 6px black;
+}
+
+.badge-data {
+  display: flex;
+  align-items: center;
+}
+
+.medal-img {
+  width: 200px;
+  height: 200px;
+  animation: growMedal 0.5s linear;
+}
+
+.stats-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex: 1;
+}
+
+.stat-item {
+  display: flex;
+  align-items: center;
+  background-color: black;
+  border-radius: var(--border-radius);
+  padding: 20px;
+  margin: 3%;
+  border: 2px solid var(--font-accent-color);
+  gap: 20px;
+  width: 300px;
+}
+
+.stat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.stat-desc {
+  color: white;
+  font-size: 20px;
+}
+
+.stat p {
+  margin: 0;
+  font-size: 2rem;
 }
 
 button {
@@ -75,17 +157,6 @@ button {
   font-weight: var(--font-weight);
   font-size: var(--font-medium);
 }
-
-/* .screen-container {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(39, 39, 39, .95);
-  z-index: 99;
-} */
 
 .results-text-bg {
   display: flex;
@@ -104,28 +175,6 @@ button {
   color: #44F3B6;
   text-shadow: 3px 3px 6px black;
   width: 100%;
-}
-
-.congrats-text-bg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  height: 8%;
-  width: 35%;
-  margin-top: -2.5rem;
-  margin-left: 1rem;
-  background: linear-gradient(to right, #44F3B6, transparent);
-  border-radius: 15px;
-}
-
-.congrats-text {
-  text-align: left;
-  font-size: 3.5vw;
-  color: white;
-  text-shadow: 3px 3px 6px black;
-  width: 100%;
-  margin-left: 1.5rem;
 }
 
 .stats-text-bg {
@@ -160,11 +209,6 @@ button {
   display: flex;
 }
 
-.box1, .box2, .box3, .box4 {
-  background-color: hsla(0, 0%, 0%, 0.4);
-  margin-bottom: 1rem;
-}
-
 .box1 {
   width: 20%;
   height: 45vh;
@@ -184,37 +228,6 @@ button {
   align-items: center;
 }
 
-.badge-container {
-  width: 95%;
-  height: 30vh;
-  margin-top: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 99999;
-}
-
-.badge {
-  height: 20vh;
-  width: 25%;
-}
-
-.achievements-container {
-  position: fixed;
-  height: 45%;
-  width: 20%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: left;
-  margin-left: 1rem;
-}
-
-.achievement-item {
-  display: flex;
-  align-items: center;
-  margin: 25px 0;
-}
 
 .text-container {
   display: flex;
@@ -238,25 +251,20 @@ button {
 
 @keyframes growMedal {
   0% {
-    transform: scale(0.1);
     opacity: 0;
+    transform: scale(1.5);
   }
   50% {
-    transform: scale(1.1);
-    opacity: 1;
+    transform: scale(1.5);
+    opacity: 0;
   }
   100% {
-    transform: scale(1.25);
+    transform: scale(1);
+    opacity: 1;
   }
 }
 
-.medal-img {
-  width: 200px;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-  animation: growMedal 1s ease-out;
-}
+
 
 
 .box3 {
@@ -284,23 +292,6 @@ button {
   color: white;
 }
 
-.stats-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-  align-items: center;
-}
-
-.stat-item {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin-right: 20px;
-  margin-top: 10px;
-  background-color: black;
-  border-radius: 20px;
-  padding: 15px;
-}
 
 .icon-badge {
   height: 4rem;
@@ -315,20 +306,7 @@ button {
   align-items: center;
 }
 
-.stat-desc {
-  color: white;
-  font-size: 20px;
-  text-align: center;
-  flex-grow: 1;
-}
 
-.stat-item p {
-  margin: 0;
-  font-size: 1.5rem;
-  color: white;
-  margin-left: 30px;
-  text-align: right;
-}
 
 @media (max-width: 768px) {
   .results-text, .congrats-text, .stats-text {
@@ -337,15 +315,5 @@ button {
 
   .box1, .box2, .box3, .box4 {
     height: auto;
-  }
-
-  .icon-badge {
-    width: 2.5rem;
-    height: 2.5rem;
-    font-size: 1.2rem;
-  }
-
-  .stat-item {
-    font-size: 2vw;
   }
 }
